classDiagram
    class AuthController {
        +register(RegisterRequest) AuthResponse
        +login(LoginRequest) AuthResponse
        +logout(Authorization) void
        +searchEmployers(q) List~UserResponse~
    }

    class UserController {
        +getMe(Authorization) UserResponse
    }

    class TimesheetController {
        +getDashboard(Authentication) TimesheetDashboardResponse
        +clockIn(Authentication) void
        +clockOut(Authentication) void
    }

    class AuthService {
        +register(RegisterRequest) AuthResponse
        +login(LoginRequest) AuthResponse
        +logout(token) void
        +getCurrentUser(token) UserResponse
        +searchEmployers(query) List~UserResponse~
    }

    class TimesheetService {
        +getDashboard(userId) TimesheetDashboardResponse
        +clockIn(userId) void
        +clockOut(userId) void
    }

    class JwtUtil {
        +generateToken(userId) String
        +validateToken(token) boolean
        +getUserIdFromToken(token) Integer
    }

    class User {
        +Integer userId
        +String username
        +String email
        +String passwordHash
        +UserRole role
        +User employer
        +Boolean isActive
        +Integer failedAttempts
        +LocalDateTime lastLogin
    }

    class Employee {
        +Integer employeeId
        +String employeeName
        +User createdByUser
        +Boolean isActive
    }

    class TimesheetRecord {
        +Integer recordId
        +Employee employee
        +User createdByUser
        +LocalDateTime clockInAt
        +LocalDateTime clockOutAt
        +BigDecimal hoursWorked
        +String status
    }

    class UserSession {
        +Integer sessionId
        +User user
        +String sessionToken
        +LocalDateTime expiresAt
        +Boolean isActive
    }

    class UserRepository
    class EmployeeRepository
    class TimesheetRecordRepository
    class UserSessionRepository

    class WebRegisterPage {
        +role selector
        +employer search/select
    }

    class WebTimesheetPage {
        +employer view employees+logs
        +employee view clock in/out+hours
    }

    class MobileRegisterScreen {
        +role selector
        +employer search/select
    }

    class MobileTimesheetScreen {
        +role-based dashboard
        +clock in/out actions
    }

    AuthController --> AuthService
    UserController --> AuthService
    TimesheetController --> TimesheetService

    AuthService --> UserRepository
    AuthService --> EmployeeRepository
    AuthService --> UserSessionRepository
    AuthService --> JwtUtil

    TimesheetService --> UserRepository
    TimesheetService --> EmployeeRepository
    TimesheetService --> TimesheetRecordRepository

    User "1" --> "0..*" Employee : manages
    Employee "1" --> "0..*" TimesheetRecord : has
    User "1" --> "0..*" TimesheetRecord : createdBy
    User "1" --> "0..*" UserSession : owns sessions
    User "0..1" --> "0..*" User : employer of employees

    WebRegisterPage --> AuthController : /api/auth/register
    WebRegisterPage --> AuthController : /api/auth/employers/search
    WebTimesheetPage --> TimesheetController : /api/timesheets/*
    WebTimesheetPage --> UserController : /api/user/me

    MobileRegisterScreen --> AuthController : /api/auth/register
    MobileRegisterScreen --> AuthController : /api/auth/employers/search
    MobileTimesheetScreen --> TimesheetController : /api/timesheets/*
    MobileTimesheetScreen --> UserController : /api/user/me
